-- Create callsign prefix lookup table for geographic coordinates
-- Migration: 004 - Callsign prefix to country mapping

-- Drop table if exists (for re-running migration)
DROP TABLE IF EXISTS callsign_prefixes CASCADE;

-- Create callsign prefixes table
CREATE TABLE callsign_prefixes (
    id SERIAL PRIMARY KEY,
    prefix VARCHAR(10) NOT NULL UNIQUE,
    country VARCHAR(255) NOT NULL,
    latitude DECIMAL(9, 6) NOT NULL,
    longitude DECIMAL(10, 6) NOT NULL,
    created_at TIMESTAMP WITH TIME ZONE DEFAULT NOW(),
    updated_at TIMESTAMP WITH TIME ZONE DEFAULT NOW()
);

-- Create indexes for performance
CREATE INDEX idx_callsign_prefixes_prefix ON callsign_prefixes(prefix);
CREATE INDEX idx_callsign_prefixes_country ON callsign_prefixes(country);

-- Add comments
COMMENT ON TABLE callsign_prefixes IS 'Amateur radio callsign prefix to country/territory mapping with approximate geographic coordinates';
COMMENT ON COLUMN callsign_prefixes.prefix IS 'Callsign prefix (1-4 characters, e.g., K, G, DL, KH5K)';
COMMENT ON COLUMN callsign_prefixes.country IS 'Country or territory name';
COMMENT ON COLUMN callsign_prefixes.latitude IS 'Approximate geographic center latitude in decimal degrees';
COMMENT ON COLUMN callsign_prefixes.longitude IS 'Approximate geographic center longitude in decimal degrees';

-- Insert all callsign prefixes
INSERT INTO callsign_prefixes (prefix, country, latitude, longitude) VALUES
('1A', 'Sovereign Military Order of Malta', 41.9029, 12.4534),
('1S', 'Spratly Islands', 8.6389, 111.9236),
('3A', 'Monaco', 43.7384, 7.4246),
('3B6', 'Agalega & St. Brandon Islands', -10.4167, 56.6167),
('3B7', 'Agalega & St. Brandon Islands', -16.5833, 53.5833),
('3B8', 'Mauritius', -20.1609, 57.5012),
('3B9', 'Rodriguez Island', -19.7167, 63.4167),
('3C', 'Equatorial Guinea', 1.6508, 10.2679),
('3C0', 'Annobon Island', -1.4264, 5.6311),
('3D2', 'Fiji', -17.7134, 178.0650),
('3D2/C', 'Conway Reef', -21.8333, -174.6667),
('3D2/R', 'Rotuma Island', -12.5, 177.0833),
('3DA', 'Swaziland', -26.5225, 31.4659),
('3V', 'Tunisia', 33.8869, 9.5375),
('3W', 'Vietnam', 14.0583, 108.2772),
('3X', 'Guinea', 9.9456, -9.6966),
('3Y/B', 'Bouvet Island', -54.4233, 3.3464),
('3Y/P', 'Peter 1 Island', -68.8, -90.6167),
('4J', 'Azerbaijan', 40.1431, 47.5769),
('4K', 'Azerbaijan', 40.1431, 47.5769),
('4L', 'Georgia', 42.3154, 43.3569),
('4O', 'Montenegro', 42.7087, 19.3744),
('4S', 'Sri Lanka', 7.8731, 80.7718),
('4U1I', 'ITU Geneva', 46.2044, 6.1432),
('4U1U', 'United Nations HQ', 40.7489, -73.9680),
('4U1V', 'Vienna Intl Ctr', 48.2206, 16.4178),
('4W', 'Yemen', 15.5527, 48.5164),
('4X', 'Israel', 31.0461, 34.8516),
('5A', 'Libya', 26.3351, 17.2283),
('5B', 'Cyprus', 35.1264, 33.4299),
('5H', 'Tanzania', -6.3690, 34.8888),
('5N', 'Nigeria', 9.0820, 8.6753),
('5R', 'Madagascar', -18.7669, 46.8691),
('5T', 'Mauritania', 21.0079, -10.9408),
('5U', 'Niger', 17.6078, 8.0817),
('5V', 'Togo', 8.6195, 0.8248),
('5W', 'Samoa', -13.7590, -172.1046),
('5X', 'Uganda', 1.3733, 32.2903),
('5Z', 'Kenya', -0.0236, 37.9062),
('6W', 'Senegal', 14.4974, -14.4524),
('6Y', 'Jamaica', 18.1096, -77.2975),
('7O', 'Yemen', 15.5527, 48.5164),
('7P', 'Lesotho', -29.6100, 28.2336),
('7Q', 'Malawi', -13.2543, 34.3015),
('7X', 'Algeria', 28.0339, 1.6596),
('8P', 'Barbados', 13.1939, -59.5432),
('8Q', 'Maldives', 3.2028, 73.2207),
('8R', 'Guyana', 4.8604, -58.9302),
('9A', 'Croatia', 45.1, 15.2),
('9G', 'Ghana', 7.9465, -1.0232),
('9H', 'Malta', 35.9375, 14.3754),
('9J', 'Zambia', -13.1339, 27.8493),
('9K', 'Kuwait', 29.3117, 47.4818),
('9L', 'Sierra Leone', 8.4606, -11.7799),
('9M2', 'West Malaysia', 4.2105, 101.9758),
('9M6', 'East Malaysia', 4.2158, 117.8883),
('9N', 'Nepal', 28.3949, 84.1240),
('9Q', 'Dem. Rep. of the Congo', -4.0383, 21.7587),
('9U', 'Burundi', -3.3731, 29.9189),
('9V', 'Singapore', 1.3521, 103.8198),
('9X', 'Rwanda', -1.9403, 29.8739),
('9Y', 'Trinidad & Tobago', 10.6918, -61.2225),
('A2', 'Botswana', -22.3285, 24.6849),
('A3', 'Tonga', -21.1789, -175.1982),
('A4', 'Oman', 21.5126, 55.9233),
('A5', 'Bhutan', 27.5142, 90.4336),
('A6', 'United Arab Emirates', 23.4241, 53.8478),
('A7', 'Qatar', 25.3548, 51.1839),
('A9', 'Bahrain', 26.0667, 50.5577),
('AP', 'Pakistan', 30.3753, 69.3451),
('BS7', 'Scarborough Reef', 15.1333, 117.7667),
('BV', 'Bouvet', -54.4233, 3.3464),
('BY', 'China', 35.8617, 104.1954),
('C2', 'Nauru', -0.5228, 166.9315),
('C3', 'Andorra', 42.5063, 1.5218),
('C5', 'Gambia', 13.4432, -15.3101),
('C6', 'Bahamas', 25.0343, -77.3963),
('C9', 'Mozambique', -18.6657, 35.5296),
('CE', 'Chile', -35.6751, -71.5430),
('CE0X', 'San Felix & San Ambrosio', -26.3, -80.0833),
('CE0Y', 'Easter Island', -27.1127, -109.3497),
('CE0Z', 'Juan Fernandez Islands', -33.6167, -78.85),
('CE9', 'Antarctica', -75.2509, -0.0713),
('CM', 'Cuba', 21.5218, -77.7812),
('CN', 'Morocco', 31.7917, -7.0926),
('CP', 'Bolivia', -16.2902, -63.5887),
('CT', 'Portugal', 39.3999, -8.2245),
('CT3', 'Madeira Islands', 32.6669, -16.9241),
('CU', 'Azores', 37.7412, -25.6756),
('CX', 'Uruguay', -32.5228, -55.7658),
('D2', 'Angola', -11.2027, 17.8739),
('D4', 'Cape Verde', 16.5388, -23.0418),
('D6', 'Comoros', -11.6455, 43.3333),
('DL', 'Fed. Rep. of Germany', 51.1657, 10.4515),
('DU', 'Philippines', 12.8797, 121.7740),
('E3', 'Eritrea', 15.1794, 39.7823),
('E4', 'Palestine', 31.9522, 35.2332),
('E51', 'North Cook Islands', -10.5, -161.0),
('E5', 'South Cook Islands', -21.2367, -159.7777),
('E6', 'Niue', -19.0544, -169.8672),
('E7', 'Bosnia-Herzegovina', 43.9159, 17.6791),
('EA', 'Spain', 40.4637, -3.7492),
('EA6', 'Balearic Islands', 39.5696, 2.6502),
('EA8', 'Canary Islands', 28.2916, -16.6291),
('EA9', 'Ceuta & Melilla', 35.8894, -5.3213),
('EI', 'Ireland', 53.4129, -8.2439),
('EK', 'Armenia', 40.0691, 45.0382),
('EL', 'Liberia', 6.4281, -9.4295),
('EP', 'Iran', 32.4279, 53.6880),
('ER', 'Moldova', 47.4116, 28.3699),
('ES', 'Estonia', 58.5953, 25.0136),
('ET', 'Ethiopia', 9.1450, 40.4897),
('EU', 'Belarus', 53.7098, 27.9534),
('EX', 'Kyrgyzstan', 41.2044, 74.7661),
('EY', 'Tajikistan', 38.8610, 71.2761),
('EZ', 'Turkmenistan', 38.9697, 59.5563),
('F', 'France', 46.2276, 2.2137),
('FG', 'Guadeloupe', 16.2650, -61.5510),
('FH', 'Mayotte', -12.8275, 45.1662),
('FJ', 'St. Barthelemy', 17.9, -62.8333),
('FK', 'New Caledonia', -20.9043, 165.6180),
('FK/C', 'Chesterfield Islands', -19.8667, 158.3333),
('FM', 'Martinique', 14.6415, -61.0242),
('FO', 'French Polynesia', -17.6797, -149.4068),
('FO/A', 'Austral Islands', -23.3667, -149.4833),
('FO/C', 'Clipperton Island', 10.3, -109.2167),
('FO/M', 'Marquesas Islands', -9.0, -140.0),
('FP', 'St. Pierre & Miquelon', 46.8852, -56.3159),
('FR', 'Reunion Island', -21.1151, 55.5364),
('FR/E', 'Europa Island', -22.3333, 40.3667),
('FR/G', 'Glorioso Islands', -11.55, 47.3),
('FR/J', 'Juan de Nova Island', -17.05, 42.7167),
('FR/T', 'Tromelin Island', -15.8833, 54.5167),
('FS', 'St. Martin', 18.0667, -63.05),
('FT/W', 'Crozet Island', -46.4333, 51.75),
('FT/X', 'Kerguelen Islands', -49.3528, 69.3472),
('FT/Z', 'Amsterdam & St. Paul Is.', -37.8333, 77.5333),
('FW', 'Wallis & Futuna Islands', -13.7687, -177.1561),
('FY', 'French Guiana', 3.9339, -53.1258),
('G', 'England', 52.3555, -1.1743),
('GD', 'Isle of Man', 54.2361, -4.5481),
('GI', 'Northern Ireland', 54.7877, -6.4923),
('GJ', 'Jersey', 49.2144, -2.1312),
('GM', 'Scotland', 56.4907, -4.2026),
('GU', 'Guernsey', 49.4657, -2.5853),
('GW', 'Wales', 52.1307, -3.7837),
('H4', 'Solomon Islands', -9.6457, 160.1562),
('H40', 'Temotu Province', -10.7, 166.0),
('HA', 'Hungary', 47.1625, 19.5033),
('HB', 'Switzerland', 46.8182, 8.2275),
('HB0', 'Liechtenstein', 47.1660, 9.5554),
('HC', 'Ecuador', -1.8312, -78.1834),
('HC8', 'Galapagos Islands', -0.9538, -91.0036),
('HH', 'Haiti', 18.9712, -72.2852),
('HI', 'Dominican Republic', 18.7357, -70.1627),
('HK', 'Colombia', 4.5709, -74.2973),
('HK0/A', 'San Andres & Providencia', 12.5847, -81.7006),
('HK0/M', 'Malpelo Island', 3.9833, -81.6),
('HL', 'South Korea', 35.9078, 127.7669),
('HP', 'Panama', 8.5380, -80.7821),
('HR', 'Honduras', 15.2000, -86.2419),
('HS', 'Thailand', 15.8700, 100.9925),
('HV', 'Vatican City', 41.9029, 12.4534),
('HZ', 'Saudi Arabia', 23.8859, 45.0792),
('I', 'Italy', 41.8719, 12.5674),
('IS', 'Sardinia', 40.1209, 9.0129),
('J2', 'Djibouti', 11.8251, 42.5903),
('J3', 'Grenada', 12.1165, -61.6790),
('J5', 'Guinea-Bissau', 11.8037, -15.1804),
('J6', 'St. Lucia', 13.9094, -60.9789),
('J7', 'Dominica', 15.4150, -61.3710),
('J8', 'St. Vincent', 12.9843, -61.2872),
('JA', 'Japan', 36.2048, 138.2529),
('JD/M', 'Minami Torishima', 24.2883, 153.9831),
('JD/O', 'Ogasawara', 27.0944, 142.1917),
('JT', 'Mongolia', 46.8625, 103.8467),
('JW', 'Svalbard', 77.8750, 20.9752),
('JX', 'Jan Mayen', 71.0308, -8.2920),
('JY', 'Jordan', 30.5852, 36.2384),
('K', 'United States', 37.0902, -95.7129),
('KG4', 'Guantanamo Bay', 19.9074, -75.1389),
('KH0', 'Mariana Islands', 15.0979, 145.6739),
('KH1', 'Baker & Howland Islands', 0.2, -176.6333),
('KH2', 'Guam', 13.4443, 144.7937),
('KH3', 'Johnston Island', 16.7295, -169.5336),
('KH4', 'Midway Island', 28.2072, -177.3735),
('KH5', 'Palmyra & Jarvis Islands', 5.8833, -162.0833),
('KH5K', 'Kingman Reef', 6.3833, -162.35),
('KH6', 'Hawaii', 19.8968, -155.5828),
('KH7K', 'Kure Island', 28.3917, -178.2917),
('KH8', 'American Samoa', -14.2710, -170.1322),
('KH8/S', 'Swains Island', -11.05, -171.0833),
('KH9', 'Wake Island', 19.2806, 166.6500),
('KL', 'Alaska', 61.3707, -152.4044),
('KP1', 'Navassa Island', 18.4, -75.0167),
('KP2', 'Virgin Islands', 18.3358, -64.8963),
('KP4', 'Puerto Rico', 18.2208, -66.5901),
('KP5', 'Desecheo Island', 18.3833, -67.4833),
('LA', 'Norway', 60.4720, 8.4689),
('LU', 'Argentina', -38.4161, -63.6167),
('LX', 'Luxembourg', 49.8153, 6.1296),
('LY', 'Lithuania', 55.1694, 23.8813),
('LZ', 'Bulgaria', 42.7339, 25.4858),
('OA', 'Peru', -9.1900, -75.0152),
('OD', 'Lebanon', 33.8547, 35.8623),
('OE', 'Austria', 47.5162, 14.5501),
('OH', 'Finland', 61.9241, 25.7482),
('OH0', 'Aland Islands', 60.1785, 19.9156),
('OJ0', 'Market Reef', 60.3, 19.1333),
('OK', 'Czech Republic', 49.8175, 15.4730),
('OM', 'Slovak Republic', 48.6690, 19.6990),
('ON', 'Belgium', 50.5039, 4.4699),
('OX', 'Greenland', 71.7069, -42.6043),
('OY', 'Faroe Islands', 61.8926, -6.9118),
('OZ', 'Denmark', 56.2639, 9.5018),
('P2', 'Papua New Guinea', -6.3150, 143.9555),
('P4', 'Aruba', 12.5211, -69.9683),
('P5', 'Dem. People''s Rep. of Korea', 40.3399, 127.5101),
('PA', 'Netherlands', 52.1326, 5.2913),
('PJ2', 'Curacao', 12.1696, -68.9900),
('PJ4', 'Bonaire', 12.2019, -68.2624),
('PJ5', 'Saba & St. Eustatius', 17.6333, -63.2333),
('PJ7', 'St. Maarten', 18.0425, -63.0548),
('PY', 'Brazil', -14.2350, -51.9253),
('PY0F', 'Fernando de Noronha', -3.8549, -32.4297),
('PY0S', 'St. Peter & St. Paul Rocks', 0.9222, -29.3381),
('PY0T', 'Trindade & Martim Vaz Islands', -20.5, -29.3),
('PZ', 'Suriname', 3.9193, -56.0278),
('R1F', 'Franz Josef Land', 80.6, 54.0),
('R1M', 'Malyj Vysotskij Island', 60.6333, 28.5167),
('S0', 'Western Sahara', 24.2155, -12.8858),
('S2', 'Bangladesh', 23.6850, 90.3563),
('S5', 'Slovenia', 46.1512, 14.9955),
('S7', 'Seychelles', -4.6796, 55.4920),
('S9', 'Sao Tome & Principe', 0.1864, 6.6131),
('SM', 'Sweden', 60.1282, 18.6435),
('SP', 'Poland', 51.9194, 19.1451),
('ST', 'Sudan', 12.8628, 30.2176),
('SU', 'Egypt', 26.8206, 30.8025),
('SV', 'Greece', 39.0742, 21.8243),
('SV/A', 'Mount Athos', 40.1572, 24.3261),
('SV5', 'Dodecanese', 36.4333, 27.2),
('SV9', 'Crete', 35.2401, 24.8093),
('T2', 'Tuvalu', -7.1095, 177.6493),
('T30', 'West Kiribati', 1.8709, -157.3630),
('T31', 'Central Kiribati', -0.8333, -174.5),
('T32', 'East Kiribati', 1.9747, -157.4778),
('T33', 'Banaba Island', -0.8667, 169.5333),
('T5', 'Somalia', 5.1521, 46.1996),
('T7', 'San Marino', 43.9424, 12.4578),
('T8', 'Palau', 7.5150, 134.5825),
('TA', 'Turkey', 38.9637, 35.2433),
('TF', 'Iceland', 64.9631, -19.0208),
('TG', 'Guatemala', 15.7835, -90.2308),
('TI', 'Costa Rica', 9.7489, -83.7534),
('TI9', 'Cocos Island', 5.5333, -87.0667),
('TJ', 'Cameroon', 7.3697, 12.3547),
('TK', 'Corsica', 42.0396, 9.0129),
('TL', 'Central African Republic', 6.6111, 20.9394),
('TN', 'Rep. of the Congo', -0.2280, 15.8277),
('TR', 'Gabon', -0.8037, 11.6094),
('TT', 'Chad', 15.4542, 18.7322),
('TU', 'Ivory Coast', 7.5400, -5.5471),
('TY', 'Benin', 9.3077, 2.3158),
('TZ', 'Mali', 17.5707, -3.9962),
('UA', 'Russia', 61.5240, 105.3188),
('UA2', 'Kaliningrad', 54.7104, 20.4522),
('UK', 'Uzbekistan', 41.3775, 64.5853),
('UN', 'Kazakhstan', 48.0196, 66.9237),
('UR', 'Ukraine', 48.3794, 31.1656),
('V2', 'Antigua & Barbuda', 17.0608, -61.7964),
('V3', 'Belize', 17.1899, -88.4976),
('V4', 'St. Kitts & Nevis', 17.3578, -62.7830),
('V5', 'Namibia', -22.9576, 18.4904),
('V6', 'Micronesia', 7.4256, 150.5508),
('V7', 'Marshall Islands', 7.1315, 171.1845),
('V8', 'Brunei Darussalam', 4.5353, 114.7277),
('VE', 'Canada', 56.1304, -106.3468),
('VK', 'Australia', -25.2744, 133.7751),
('VK0H', 'Heard Island', -53.1, 73.5167),
('VK0M', 'Macquarie Island', -54.5, 158.95),
('VK9C', 'Cocos (Keeling) Islands', -12.1642, 96.8710),
('VK9L', 'Lord Howe Island', -31.5556, 159.0833),
('VK9M', 'Mellish Reef', -17.4, 155.85),
('VK9N', 'Norfolk Island', -29.0408, 167.9547),
('VK9W', 'Willis Island', -16.3, 149.9667),
('VK9X', 'Christmas Island', -10.4475, 105.6904),
('VP2E', 'Anguilla', 18.2206, -63.0686),
('VP2M', 'Montserrat', 16.7425, -62.1874),
('VP2V', 'British Virgin Islands', 18.4207, -64.6399),
('VP5', 'Turks & Caicos Islands', 21.6940, -71.7979),
('VP6', 'Pitcairn Island', -25.0667, -130.1),
('VP6/D', 'Ducie Island', -24.6792, -124.7931),
('VP8', 'Falkland Islands', -51.7963, -59.5236),
('VP8/G', 'South Georgia Island', -54.4296, -36.5879),
('VP8/H', 'South Shetland Islands', -62.0, -58.0),
('VP8/O', 'South Orkney Islands', -60.6, -45.5),
('VP8/S', 'South Sandwich Islands', -57.75, -26.5),
('VP9', 'Bermuda', 32.3078, -64.7505),
('VQ9', 'Chagos Islands', -6.3433, 71.8765),
('VR', 'Hong Kong', 22.3193, 114.1694),
('VU', 'India', 20.5937, 78.9629),
('VU4', 'Andaman & Nicobar Is.', 11.7401, 92.6586),
('VU7', 'Lakshadweep Islands', 10.5667, 72.6417),
('XE', 'Mexico', 23.6345, -102.5528),
('XF4', 'Revillagigedo', 18.8, -111.0),
('XT', 'Burkina Faso', 12.2383, -1.5616),
('XU', 'Cambodia', 12.5657, 104.9910),
('XW', 'Laos', 19.8563, 102.4955),
('XX9', 'Macao', 22.1987, 113.5439),
('XZ', 'Myanmar', 21.9162, 95.9560),
('YA', 'Afghanistan', 33.9391, 67.7100),
('YB', 'Indonesia', -0.7893, 113.9213),
('YI', 'Iraq', 33.2232, 43.6793),
('YJ', 'Vanuatu', -15.3767, 166.9592),
('YK', 'Syria', 34.8021, 38.9968),
('YL', 'Latvia', 56.8796, 24.6032),
('YN', 'Nicaragua', 12.8654, -85.2072),
('YO', 'Romania', 45.9432, 24.9668),
('YS', 'El Salvador', 13.7942, -88.8965),
('YU', 'Serbia', 44.0165, 21.0059),
('YV', 'Venezuela', 6.4238, -66.5897),
('YV0', 'Aves Island', 15.6833, -63.6167),
('Z2', 'Zimbabwe', -19.0154, 29.1549),
('Z3', 'North Macedonia', 41.6086, 21.7453),
('Z6', 'Kosovo', 42.6026, 20.9030),
('Z8', 'South Sudan', 6.8770, 31.3070),
('ZA', 'Albania', 41.1533, 20.1683),
('ZB', 'Gibraltar', 36.1408, -5.3536),
('ZC4', 'UK Sovereign Base Areas on Cyprus', 34.7, 32.9),
('ZD7', 'St. Helena', -15.9650, -5.7089),
('ZD8', 'Ascension Island', -7.9467, -14.3559),
('ZD9', 'Tristan da Cunha & Gough Islands', -37.1052, -12.2777),
('ZF', 'Cayman Islands', 19.3133, -81.2546),
('ZK1/N', 'North Cook Islands', -10.5, -161.0),
('ZK1/S', 'South Cook Islands', -21.2367, -159.7777),
('ZK2', 'Niue', -19.0544, -169.8672),
('ZK3', 'Tokelau Islands', -9.2, -171.8481),
('ZL', 'New Zealand', -40.9006, 174.8860),
('ZL7', 'Chatham Islands', -43.95, -176.5667),
('ZL8', 'Kermadec Islands', -29.25, -177.9167),
('ZL9', 'Auckland & Campbell Islands', -50.7333, 166.1),
('ZP', 'Paraguay', -23.4425, -58.4438),
('ZS', 'South Africa', -30.5595, 22.9375),
('ZS8', 'Prince Edward & Marion Islands', -46.9, 37.7333);

-- Grant permissions
GRANT SELECT ON callsign_prefixes TO PUBLIC;
GRANT SELECT, INSERT, UPDATE ON callsign_prefixes TO dx_web_user;
GRANT USAGE, SELECT ON SEQUENCE callsign_prefixes_id_seq TO dx_web_user;

-- Success message
SELECT 'Callsign prefixes table created successfully with ' || COUNT(*) || ' entries' AS status
FROM callsign_prefixes;
